# ardupilot-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  publish-mcp.yml  publish.yml
scripts/: sitl_check.py  wire_check.py
src/ardupilot_mcp/: __init__.py  cache.py  connection.py  params.py  safety.py  server.py
src/mavlink_mcp/: __init__.py  cache.py  connection.py  safety.py  server.py
tests/: conftest.py  test_cache.py  test_connection.py  test_params.py  test_safety.py  test_server_smoke.py
