[project]
name = "mavlink-mcp"
version = "0.1.0"
description = "MCP server for talking to ArduPilot vehicles over MAVLink (SITL-first, safety-gated)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Kyle Adomavicius" }]
keywords = ["mcp", "mavlink", "ardupilot", "pymavlink", "sitl", "drone", "uav"]
dependencies = [
    "mcp>=1.2.0",
    "pymavlink>=2.4.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
mavlink-mcp = "mavlink_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mavlink_mcp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
