[project]
name = "ardupilot-mcp"
version = "0.1.0"
description = "MCP server for talking to ArduPilot vehicles over MAVLink. SITL-first, safety-gated."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kyle Adomavicius" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "mavlink",
    "ardupilot",
    "pymavlink",
    "sitl",
    "drone",
    "uav",
    "uas",
    "gcs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.2.0,<2.0",
    "pymavlink>=2.4.40,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
ardupilot-mcp = "ardupilot_mcp.server:main"

[project.urls]
Repository = "https://github.com/rmeadomavic/ardupilot-mcp"
Issues = "https://github.com/rmeadomavic/ardupilot-mcp/issues"
Changelog = "https://github.com/rmeadomavic/ardupilot-mcp/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ardupilot_mcp = ["py.typed"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
